fixed layout breaking

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -71,21 +71,6 @@
   }
 }
 
-/*
-  ----------------- BACKGROUND COLOR
-
-   --color-grey-0: #ffffff;
-    --color-grey-100: #f4f6fa;
-    --color-grey-200: #abc1e1;
-    --color-grey-300: #626c7f;
-    --color-grey-400: #3b4d66;
-    --color-grey-500: #313e51;
-      --color-green: #26d782;
-  --color-red: #ee5454;
-  --color-brand: #a729f5;
-
-*/
-
 .bg-grey-0 {
   background-color: var(--color-grey-0);
 }
